examples/test/testpolicy3557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3557
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value21
          key44: value19
          key24: value12
      podSelector:
        matchLabels:
          key28: value45
          key20: value23
